css for banner header

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
  </head>
   <body>
    <div class="banner">
-     <p>Thunder Testnet beta is live!  Are you a developer interested in building on Thunder?</p>
-     <button>Apply to access Testnet Beta</button>
+     <p class="banner_text">Thunder Testnet beta is live!  Are you a developer interested in building on Thunder?</p>
+     <button class="banner_button">Apply to access Testnet Beta</button>
    </div>
    <div class="header">
-     <img />
      <div class="header_button_container">
        <button class="header_button">HOME</button>
        <button class="header_button">TEAM</button>
@@ -22,7 +21,7 @@
        <button class="header_button">BLOCK EXPLORER</button>
      </div>
    </div>
-   <h1> Thunder Developer Portal</h1>
+   <p class="title"> Thunder Developer Portal</p>
    <div class="block_info_container">
      <div class="block_info_box">
        <p class="block_info_title">Current Block</p>
