--- a/index.html
+++ b/index.html
@@ -38,53 +38,55 @@
    </div>
    <p class="block_info_footer">something goes there asdfasdfasd fasdfasdf asd fa sdf asdf asd fas df asd fas df asdf as df asdf asd fa sdf asdf as dfadsfa</p>
    <div class="block_button_container">
-     <button>Block Explorer</button>
-     <button>Thunderspeed Chatroom</button>
+     <button class="block_button_orange">Block Explorer</button>
+     <button class="block_button_black">Thunderspeed Chatroom</button>
    </div>
    <div class="application">
-     <p>Build Decentralized applications with Thunder</p>
+     <p class="application_text">Build Decentralized applications with Thunder</p>
      <div class="application_info_container">
-       <p>Lots of info ...more</p>
+       <p>Lots of info something goes there asdfasdfasd fasdfasdf asd fa sdf asdf asd fas df asd fas df asdf as df asdf asd fa sdf asdf as dfadsfa...more</p>
        <div class="application_info_button_container">
-         <button>Litepaper</button>
-         <button>Whitepaper</button>
+         <button class="application_info_button_orange">Litepaper</button>
+         <button class="application_info_button_yellow">Whitepaper</button>
        </div>
      </div>
    </div>
    <div class="getting_started">
-     <h2>Getting Started</h2>
+     <h2 class="getting_started_title">Getting Started</h2>
      <div class="instruction_container">
        <div class="dev_resources">
          <h3> Developer Resources</h3>
-         <a>Build dApps on Thunder</a>
-         <a>Migrate dApps to Thunder</a>
-         <a>Get Test Tokens to build on Thunder</a>
-         <a>FAQ</a>
-         <a>Need Help? Get in touch on our Slack</a>
+         <ul>
+           <li><a>Build dApps on Thunder</a></li>
+           <li><a>Migrate dApps to Thunder</a></li>
+           <li><a>Get Test Tokens to build on Thunder</a></li>
+           <li><a>F.A.Q.</a></li>
+           <li><a>Need Help? Get in touch on our Slack</a></li>
+         </ul>
        </div>
        <div class="get_access">
          <h3>Get Testnet Access</h3>
-         <p>Do you want to develop apps on our Testnet? Selected developers will gain exclusive access to our beta Testnet Source Code.</p>
-         <p>Apply below to be among the first.</p>
-         <button>Apply to access Testnet Beta</button>
+         <p class="get_access_text">Do you want to develop apps on our Testnet? Selected developers will gain exclusive access to our beta Testnet Source Code.</p>
+         <p class="get_access_text">Apply below to be among the first.</p>
+         <button class="get_access_button">Apply to access Testnet Beta</button>
        </div>
      </div>
    </div>
    <div class="subscription_container">
-     <p>Subscribe and join our community! Get a peek at our latest releases and initiatives before anyone else.</p>
-     <form method="get" action="/search" id="search">
-        <input className="subscribe" type="text" size="40" placeholder="john.doe@email.com"/>
-        <button>Subscribe</button>
+     <p class="subscription_text">Subscribe and join our community! Get a peek at our latest releases and initiatives before anyone else.</p>
+     <form method="get">
+        <input class="subscribe" type="text" size="40" placeholder="john.doe@email.com"/>
+        <button class="subscribe_button">Subscribe</button>
       </form>
    </div>
    <div class="footer">
-     <div class="contact_icon_conttainer">
-       <button>twitter</button>
-       <button>twitter</button>
+     <div class="footer_box">
+       <div class="contact_icon_container">
+         <button class="footer_icon_twitter"></button>
+         <button class="footer_icon_reddit"></button>
+       </div>
+       <p class="footer_text">Thunder Token Inc.  All Rights Reserved.</p>
      </div>
-     <p>
-       Thunder Token Inc.  All Rights Reserved.
-     </p>
    </div>
   </body>
  </html>
